@@ -20,6 +20,7 @@ ChangeLog
 [-] * Fix distutils build (bug #916).
 [-] * Detect when phone does not support ATE1 (bug #918).
 [-] * Do not use OBEX on Motorola L7 (bug #912).
+[-] * Reinclude full SMS text in comments in backup (bug #905).
     
 20090527 - 1.24.91
 
